--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,14 @@
 
 <div class="me">
   <h2>Who Am I?</h2>
-  <p>I am William</p>
+  <p>My name is William Dunlop and i have a very strong passion for anything
+    related to virtual 3D graphics. Since I was very young I have had an interest
+    in video games, 2D animation, 3D animation and art. My time at college has
+    helped me build on skills that would allow me to contribute to the industry
+    that I am so passionate about. This includes 3D Moddeling, Uv unwrapping,
+    character rigging, texturing, animating, setting up complex renders,
+    level design, games design and much more. I am very knowledgeable with programs
+    such as Maya, Photoshop and Bitmap 2 Material and am currently in the process
+    of learning Unreal Engine 4, Adobe Flash, Substance Designer and Quixel's Ddo.
+    Below are links to personal projects that i have conducted independently</p>
 </div>
