--- a/app/assets/stylesheets/william0.css
+++ b/app/assets/stylesheets/william0.css
@@ -411,7 +411,7 @@ a:hover { text-decoration: none; color:#17d000; }
 }
 
   .face{
-    background-image: url(https://www.facebookbrand.com/img/fb-art.jpg);
+    background: url(https://www.facebookbrand.com/img/fb-art.jpg);
   }
   .linkedin{
 
