--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,23 @@
 
 <div class="me">
   <h2>Who Am I?</h2>
-  <p>My name is William Dunlop and i have a very strong passion for anything
+
+  <p>My name is William Dunlop and I am a web developer, software developer and
+    3D Animator. Since I was very young I have had an interest in video games, 
+    2D and 3D animation, computer, technology, science and art. These interests have
+    remained a part of my life for as long as i can remember and will continue to do
+    so. Web and software development are skills that I am currently learning through
+    a Diploma of Software Development. It is very quickly becoming my passion and
+    will be what i use to build my future.
+    As well as this I have also built on skills in regards to 2D and 3D Animation by
+    completing a bachelors degree in Interactive Entertainment with Animation being the major.
+    These skills include 3D Moddeling, Uv unwrapping, character rigging, texturing,
+    animating, setting up complex renders, level design, games design and much more.
+    I am very knowledgeable with programs
+    such as Maya, Photoshop and Bitmap 2 Material and am currently in the process
+    of learning Unreal Engine 4, Adobe Flash, Substance Designer and Quixel's Ddo.</p>
+
+  <!-- <p>My name is William Dunlop and i have a very strong passion for anything
     related to virtual 3D graphics. Since I was very young I have had an interest
     in video games, 2D animation, 3D animation and art. My time at college has
     helped me build on skills that would allow me to contribute to the industry
@@ -12,5 +28,5 @@
     of learning Unreal Engine 4, Adobe Flash, Substance Designer and Quixel's Ddo.
     Below are links to personal projects that i have conducted independently...
 
-  but i code too also</p>
+  but i code too also</p> -->
 </div>
