--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 
          <ul>
          <li id="first" class="firstanimation">  <!-- ID for tooltip and class for animation -->
-         <a href="#"> <img src="http://i64.tinypic.com/91cb4k.jpg" alt="benyk"/> </a>
+         <a href="pages/benyk"> <img src="http://i64.tinypic.com/91cb4k.jpg" alt="benyk"/> </a>
          <div class="tooltip"> <h1>Maya</h1> </div>
          </li>
 
