--- a/app/assets/stylesheets/william0.css
+++ b/app/assets/stylesheets/william0.css
@@ -877,7 +877,7 @@ border-width: thick;
 }
 
 .aboutben {
-  margin 0 auto 0 auto;
+  margin: 0 auto 0 auto;
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 6%;
