--- a/app/assets/stylesheets/william0.scss
+++ b/app/assets/stylesheets/william0.scss
@@ -79,7 +79,7 @@ h4{
 }
 
 body {
-  background: url("background.png") no-repeat;
+  background: image-url("background.png") no-repeat;
   background-attachment: fixed;
   background-size: cover;
 }
