--- a/app/assets/stylesheets/william0.scss
+++ b/app/assets/stylesheets/william0.scss
@@ -215,7 +215,7 @@
         .hillimage {
           width: 90%;
           height: 225px;
-          background: image-url(hill1.jpg) no-repeat;
+          background: image-url("hill1.jpg") no-repeat;
           background-size: contain;
           margin: 20px auto 0 auto;
 
@@ -246,7 +246,7 @@
         .benykimage {
           width: 90%;
           height: 200px;
-          background: image-url(benyk1.jpg) no-repeat;
+          background: image-url("benyk1.jpg") no-repeat;
           background-size: contain;
           margin: 20px auto 0 auto;
         }
@@ -276,7 +276,7 @@
         .codeimage {
           width: 90%;
           height: 225px;
-          background: image-url(code.gif) no-repeat;
+          background: image-url("code.gif") no-repeat;
           background-size: cover;
           margin: 20px auto 0 auto;
         }
@@ -320,7 +320,7 @@
     }
 
     .logo{
-      background: image-url(logo.png) no-repeat;
+      background: image-url("logo.png") no-repeat;
       background-size: contain;
       width: 250px;
       height: 200px;
@@ -348,7 +348,7 @@
         height: 50px;
         margin-right: 20px;
         margin-left: 40px;
-        background: image-url(face.png);
+        background: image-url("face.png");
         background-size: contain;
         float:left;
       }
@@ -356,7 +356,7 @@
         width: 50px;
         height: 50px;
         margin-right: 20px;
-        background: image-url(linkedin.png);
+        background: image-url("linkedin.png");
         background-size: contain;
         float:left;
       }
@@ -364,7 +364,7 @@
         width: 50px;
         height: 50px;
         margin-right: 10px;
-        background: image-url(github.png);
+        background: image-url("github.png");
         background-size: contain;
         float: left;
       }
@@ -440,7 +440,7 @@
          transition-duration: 2s;
          background-color: rgb(70, 70, 70);
          float:left;
-         background: image-url(hillhouse.jpg) no-repeat;
+         background: image-url("hillhouse.jpg") no-repeat;
          background-size: cover;
          /*border-radius: 5%;*/
          border-style: solid;
@@ -480,7 +480,7 @@
         font-family: 'Shadows Into Light', cursive;
         color: #fff;
         float: right;
-        background: image-url(hill1.jpg) no-repeat;
+        background: image-url("hill1.jpg") no-repeat;
         background-size: cover;
         pointer-events: auto;
         /*border-radius: 5%;*/
@@ -492,7 +492,7 @@
       .image2:hover {
         width: 537.5px;
         height: 350px;
-        background: image-url(hill1.jpg) no-repeat;
+        background: image-url("hill1.jpg") no-repeat;
         background-size: cover;
         /*border-radius: 5%;*/
         border-width: thick;
@@ -523,7 +523,7 @@
         text-align: center;
         font-family: 'Shadows Into Light', cursive;
         color: #fff;
-        background: image-url(nav.jpg) no-repeat;
+        background: image-url("nav.jpg") no-repeat;
         background-size: cover;
         float: left;
         pointer-events: auto;
@@ -536,7 +536,7 @@
       .image3:hover {
         width: 537.5px;
         height: 350px;
-        background: image-url(nav.jpg) no-repeat;
+        background: image-url("nav.jpg") no-repeat;
         background-size: cover;
         /*border-radius: 5%;*/
         border-width: thick;
@@ -554,7 +554,7 @@
       text-align: center;
       font-family: 'Shadows Into Light', cursive;
       color: #fff;
-      background: image-url(fields.jpg) no-repeat;
+      background: image-url("fields.jpg") no-repeat;
       background-size: cover;
       float: right;
       pointer-events: auto;
@@ -566,7 +566,7 @@
     .image4:hover {
       width: 537.5px;
       height: 350px;
-      background: image-url(fields.jpg) no-repeat;
+      background: image-url("fields.jpg") no-repeat;
       background-size: cover;
       /*border-radius: 5%;*/
       border-width: thick;
@@ -655,7 +655,7 @@
        transition-duration: 2s;
        background-color: rgb(70, 70, 70);
        float:left;
-       background: image-url(benyk1.jpg) no-repeat;
+       background: image-url("benyk1.jpg") no-repeat;
        background-size: cover;
        /*border-radius: 5%;*/
        border-style: solid;
@@ -668,7 +668,7 @@
     .imageb:hover {
       width: 420px;
       height: 240px;
-      background: image-url(benyk1.jpg) no-repeat;
+      background: image-url("benyk1.jpg") no-repeat;
       background-size: cover;
       /*border-radius: 5%;*/
       border-width: thick;
@@ -688,7 +688,7 @@
       font-family: 'Shadows Into Light', cursive;
       color: #fff;
       float: right;
-      background: image-url(benyk2.png) no-repeat;
+      background: image-url("benyk2.png") no-repeat;
       background-size: cover;
       pointer-events: auto;
       /*border-radius: 5%;*/
@@ -700,7 +700,7 @@
     .imageb2:hover {
       width: 376px;
       height: 375px;
-      background: image-url(benyk2.png) no-repeat;
+      background: image-url("benyk2.png") no-repeat;
       background-size: cover;
       /*border-radius: 5%;*/
       border-width: thick;
@@ -732,7 +732,7 @@
       text-align: center;
       font-family: 'Shadows Into Light', cursive;
       color: #fff;
-      background: image-url(benyk3.jpg) no-repeat;
+      background: image-url("benyk3.jpg") no-repeat;
       background-size: cover;
       float: left;
       pointer-events: auto;
@@ -745,7 +745,7 @@
     .imageb3:hover {
       width: 376px;
       height: 375px;
-      background: image-url(benyk3.jpg) no-repeat;
+      background: image-url("benyk3.jpg") no-repeat;
       background-size: cover;
       /*border-radius: 5%;*/
       border-width: thick;
@@ -764,7 +764,7 @@
     text-align: center;
     font-family: 'Shadows Into Light', cursive;
     color: #fff;
-    background: image-url(benyk4.jpg) no-repeat;
+    background: image-url("benyk4.jpg") no-repeat;
     background-size: cover;
     float: right;
     pointer-events: auto;
@@ -776,7 +776,7 @@
     .imageb4:hover {
       width: 376px;
       height: 375px;
-    background: image-url(benyk4.jpg) no-repeat;
+    background: image-url("benyk4.jpg") no-repeat;
     background-size: cover;
     /*border-radius: 5%;*/
     border-width: thick;
@@ -873,7 +873,7 @@ body {
 }
 
 .nav {
- background: image-url(nav.jpg) no-repeat;
+ background: image-url("nav.jpg") no-repeat;
  background-position: center;
  margin: 0px auto 20px auto;
  /*position: fixed;*/
@@ -1130,7 +1130,7 @@ a:hover { text-decoration: none; color:#17d000; }
     .hillimage {
       width: 250px;
       height: 250px;
-      background: image-url(hill1.jpg) no-repeat;
+      background: image-url("hill1.jpg") no-repeat;
       background-size: contain;
       float: left;
       margin: 20px 20px 5px 5px;
@@ -1163,7 +1163,7 @@ a:hover { text-decoration: none; color:#17d000; }
     .benykimage {
       width: 250px;
       height: 250px;
-      background: image-url(benyk1.jpg) no-repeat;
+      background: image-url("benyk1.jpg") no-repeat;
       background-size: contain;
       float: left;
       margin: 20px 20px 5px 5px;
@@ -1193,7 +1193,7 @@ a:hover { text-decoration: none; color:#17d000; }
     .codeimage {
       width: 400px;
       height: 200px;
-      background: image-url(code.gif) no-repeat;
+      background: image-url("code.gif") no-repeat;
       margin-right: 20px;
       margin-left: 5px;
       margin-top: 15px;
@@ -1238,7 +1238,7 @@ a:hover { text-decoration: none; color:#17d000; }
 }
 
 .logo{
-  background: image-url(logo.png) no-repeat;
+  background: image-url("logo.png") no-repeat;
   background-size: contain;
   float: right;
   width: 250px;
@@ -1266,7 +1266,7 @@ a:hover { text-decoration: none; color:#17d000; }
     height: 50px;
     margin-right: 20px;
     margin-left: 40px;
-    background: image-url(face.png);
+    background: image-url("face.png");
     background-size: contain;
     float:left;
   }
@@ -1274,7 +1274,7 @@ a:hover { text-decoration: none; color:#17d000; }
     width: 50px;
     height: 50px;
     margin-right: 20px;
-    background: image-url(linkedin.png);
+    background: image-url("linkedin.png");
     background-size: contain;
     float:left;
   }
@@ -1282,7 +1282,7 @@ a:hover { text-decoration: none; color:#17d000; }
     width: 50px;
     height: 50px;
     margin-right: 10px;
-    background: image-url(github.png);
+    background: image-url("github.png");
     background-size: contain;
     float: left;
   }
@@ -1358,7 +1358,7 @@ a:hover { text-decoration: none; color:#17d000; }
      transition-duration: 2s;
      background-color: rgb(70, 70, 70);
      float:left;
-     background: image-url(hillhouse.jpg) no-repeat;
+     background: image-url("hillhouse.jpg") no-repeat;
      background-size: cover;
      /*border-radius: 5%;*/
      border-style: solid;
@@ -1398,7 +1398,7 @@ a:hover { text-decoration: none; color:#17d000; }
     font-family: 'Shadows Into Light', cursive;
     color: #fff;
     float: right;
-    background: image-url(hill1.jpg) no-repeat;
+    background: image-url("hill1.jpg") no-repeat;
     background-size: cover;
     pointer-events: auto;
     /*border-radius: 5%;*/
@@ -1410,7 +1410,7 @@ a:hover { text-decoration: none; color:#17d000; }
   .image2:hover {
     width: 537.5px;
     height: 350px;
-    background: image-url(hill1.jpg) no-repeat;
+    background: image-url("hill1.jpg") no-repeat;
     background-size: cover;
     /*border-radius: 5%;*/
     border-width: thick;
@@ -1441,7 +1441,7 @@ a:hover { text-decoration: none; color:#17d000; }
     text-align: center;
     font-family: 'Shadows Into Light', cursive;
     color: #fff;
-    background: image-url(nav.jpg) no-repeat;
+    background: image-url("nav.jpg") no-repeat;
     background-size: cover;
     float: left;
     pointer-events: auto;
@@ -1454,7 +1454,7 @@ a:hover { text-decoration: none; color:#17d000; }
   .image3:hover {
     width: 537.5px;
     height: 350px;
-    background: image-url(nav.jpg) no-repeat;
+    background: image-url("nav.jpg") no-repeat;
     background-size: cover;
     /*border-radius: 5%;*/
     border-width: thick;
@@ -1472,7 +1472,7 @@ a:hover { text-decoration: none; color:#17d000; }
   text-align: center;
   font-family: 'Shadows Into Light', cursive;
   color: #fff;
-  background: image-url(fields.jpg) no-repeat;
+  background: image-url("fields.jpg") no-repeat;
   background-size: cover;
   float: right;
   pointer-events: auto;
@@ -1484,7 +1484,7 @@ a:hover { text-decoration: none; color:#17d000; }
 .image4:hover {
   width: 537.5px;
   height: 350px;
-  background: image-url(fields.jpg) no-repeat;
+  background: image-url("fields.jpg") no-repeat;
   background-size: cover;
   /*border-radius: 5%;*/
   border-width: thick;
@@ -1573,7 +1573,7 @@ height: 398px;
    transition-duration: 2s;
    background-color: rgb(70, 70, 70);
    float:left;
-   background: image-url(benyk1.jpg) no-repeat;
+   background: image-url("benyk1.jpg") no-repeat;
    background-size: cover;
    /*border-radius: 5%;*/
    border-style: solid;
@@ -1586,7 +1586,7 @@ height: 398px;
 .imageb:hover {
   width: 420px;
   height: 240px;
-  background: image-url(benyk1.jpg) no-repeat;
+  background: image-url("benyk1.jpg") no-repeat;
   background-size: cover;
   /*border-radius: 5%;*/
   border-width: thick;
@@ -1606,7 +1606,7 @@ height: 398px;
   font-family: 'Shadows Into Light', cursive;
   color: #fff;
   float: right;
-  background: image-url(benyk2.png) no-repeat;
+  background: image-url("benyk2.png") no-repeat;
   background-size: cover;
   pointer-events: auto;
   /*border-radius: 5%;*/
@@ -1618,7 +1618,7 @@ height: 398px;
 .imageb2:hover {
   width: 376px;
   height: 375px;
-  background: image-url(benyk2.png) no-repeat;
+  background: image-url("benyk2.png") no-repeat;
   background-size: cover;
   /*border-radius: 5%;*/
   border-width: thick;
@@ -1650,7 +1650,7 @@ height: 398px;
   text-align: center;
   font-family: 'Shadows Into Light', cursive;
   color: #fff;
-  background: image-url(benyk3.jpg) no-repeat;
+  background: image-url("benyk3.jpg") no-repeat;
   background-size: cover;
   float: left;
   pointer-events: auto;
@@ -1663,7 +1663,7 @@ height: 398px;
 .imageb3:hover {
   width: 376px;
   height: 375px;
-  background: image-url(benyk3.jpg) no-repeat;
+  background: image-url("benyk3.jpg") no-repeat;
   background-size: cover;
   /*border-radius: 5%;*/
   border-width: thick;
@@ -1682,7 +1682,7 @@ background-color: rgb(70, 70, 70);
 text-align: center;
 font-family: 'Shadows Into Light', cursive;
 color: #fff;
-background: image-url(benyk4.jpg) no-repeat;
+background: image-url("benyk4.jpg") no-repeat;
 background-size: cover;
 float: right;
 pointer-events: auto;
@@ -1694,7 +1694,7 @@ border-color: #000
 .imageb4:hover {
   width: 376px;
   height: 375px;
-background: image-url(benyk4.jpg) no-repeat;
+background: image-url("benyk4.jpg") no-repeat;
 background-size: cover;
 /*border-radius: 5%;*/
 border-width: thick;
@@ -1721,117 +1721,5 @@ border-width: thick;
 
 
 
-/* RESPONSIVE */
 
-
-
-/* ----------- iPhone 4 and 4S ----------- */
-
-/* Portrait and Landscape */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-
-}*/
-
-/* Portrait */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-}*/
-
-/* Landscape */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-
-}*/
-
-/* ----------- iPhone 5 and 5S ----------- */
-
-/* Portrait and Landscape */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-
-}*/
-
-/* Portrait */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-}*/
-
-/* Landscape */
-/*@media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 568px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-
-}*/
-
-/* ----------- iPhone 6 ----------- */
-
-/* Portrait and Landscape */
-/*@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-
-}*/
-
-/* Portrait */
-/*@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: portrait) {
-
-}*/
-
-/* Landscape */
-/*@media only screen
-  and (min-device-width: 375px)
-  and (max-device-width: 667px)
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (orientation: landscape) {
-
-}*/
-
-/* ----------- iPhone 6+ ----------- */
-
-/* Portrait and Landscape */
-/*@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3) {
-
-}*/
-
-/* Portrait */
-/*@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: portrait) {
-*/
-/*}*/
-
-/* Landscape */
-/*@media only screen
-  and (min-device-width: 414px)
-  and (max-device-width: 736px)
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: landscape) {
-
-}*/
 }
