--- a/app/assets/stylesheets/william0.scss
+++ b/app/assets/stylesheets/william0.scss
@@ -69,6 +69,10 @@
       background-color: rgb(25,25,25)
     }
 
+    .mcitem:hover{
+      background-color: rgb(25,25,25)
+    }
+
     h1 {
       text-align: center;
       text-decoration-style: solid;
