--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,10 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <meta name="description" content="William Dunlop - Portfolio">
+    <meta name="keywords" content="HTML,CSS,Ruby,Rails,Coding,Animation,3D,Gaming,Design,">
+    <meta name="author" content="William Dunlop">
+      
   </head>
 
   <body>
