--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Shadows+Into+Light|Ubuntu" rel="stylesheet"> 
+
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -26,9 +28,9 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="description" content="William Dunlop - Portfolio">
-    <meta name="keywords" content="HTML,CSS,Ruby,Rails,Coding,Animation,3D,Gaming,Design,">
+    <meta name="keywords" content="HTML,CSS,Ruby,Rails,Coding,Animation,3D,Gaming,Design,William,Dunlop">
     <meta name="author" content="William Dunlop">
-      
+
   </head>
 
   <body>
