--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,5 +1,5 @@
 
-<meta HTTP-EQUIV="REFRESH" content="3; url= http://localhost:3000">
+<meta HTTP-EQUIV="REFRESH" content="3; url= http://willdunlop.herokuapp.com">
 
 <div>
   <% flash.each do |key, value| %>
